[gd_scene load_steps=36 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Grafika_menu/Oblacik2.png" type="Texture" id=2]
[ext_resource path="res://Grafika_menu/planeta.png" type="Texture" id=3]
[ext_resource path="res://Grafika_menu/Oblacik1.png" type="Texture" id=4]
[ext_resource path="res://Grafika_menu/pozadie.png" type="Texture" id=5]
[ext_resource path="res://Grafika_menu/Logo_na_oblaku.png" type="Texture" id=6]
[ext_resource path="res://Fonty/Font.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Menu/SetingsMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menu/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Menu/ButtonStyles/Focused_Btn.tres" type="StyleBox" id=11]
[ext_resource path="res://Menu/ButtonStyles/PressedBtn.tres" type="StyleBox" id=12]
[ext_resource path="res://Menu/ButtonStyles/HoverBtn.tres" type="StyleBox" id=13]
[ext_resource path="res://Grafika_menu/balon.png" type="Texture" id=14]

[sub_resource type="Animation" id=29]
resource_name = "Nová Animácia"

[sub_resource type="Animation" id=30]
resource_name = "Oblacik1"
length = 12.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2053, -0.25, 0, 0.25, 0, -147.778, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 12 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 977, 0, -0.756972, 0, 8.17151, 999, -6.6, -1153.95, 2.18856e-05, 0.0038265 ),
"times": PoolRealArray( 0, 12 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 18.1, -0.25, 0, 0.25, 0, -72.4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 12 )
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13.6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2061, 857 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 2067, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 980, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../../Oblacik2Player/Oblacik2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 2154, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../../Oblacik2Player/Oblacik2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1004, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../../Oblacik2Player/Oblacik2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=32]
resource_name = "Oblacik2"
length = 20.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Oblacik2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2138, -0.25, 0, 0.25, 0, -200, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 4, 20 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Oblacik2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 998, -0.25, 0, 0.25, 0, 998, -8.05048, -1253.63, 0.00405037, 0.630727 ),
"times": PoolRealArray( 4, 20 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Oblacik2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 59, -0.25, 0, 0.25, 0, -27, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 4, 20 )
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Oblacik2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2154, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Oblacik2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1004, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Oblacik2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=34]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=11]

[sub_resource type="DynamicFont" id=20]
size = 51
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0470588, 0.890196, 0.0823529, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0470588, 0.890196, 0.0823529, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Animation" id=21]
resource_name = "Balon1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer1/Balon1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.0, 7.0 ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer1/Balon1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -7.0 ]
}

[sub_resource type="Animation" id=23]
resource_name = "Balon2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimationPlayer2/Balon2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.0, 7.0 ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimationPlayer2/Balon2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Balon3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimationPlayer3/Balon3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.0, 7.0 ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimationPlayer3/Balon3:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -7.0 ]
}

[sub_resource type="Animation" id=25]
resource_name = "Balon4"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimationPlayer4/Balon4:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.0, 7.0 ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimationPlayer4/Balon4:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -7.0 ]
}

[node name="StartMenu" type="CanvasLayer"]

[node name="Pause_Menu" parent="." instance=ExtResource( 10 )]
margin_left = 457.0
margin_top = 547.0
margin_right = 457.0
margin_bottom = 547.0

[node name="Menu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Pozadie" type="Sprite" parent="Menu"]
position = Vector2( 960, 540 )
scale = Vector2( 0.443111, 0.518483 )
texture = ExtResource( 5 )

[node name="Oblacik1Player" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("Oblacik1")
"anims/Nová Animácia" = SubResource( 29 )
anims/Oblacik1 = SubResource( 30 )
anims/RESET = SubResource( 31 )

[node name="Oblacik1" type="Sprite" parent="Menu/Oblacik1Player"]
position = Vector2( 2067, 980 )
rotation = 0.237365
scale = Vector2( 0.460702, 0.810639 )
texture = ExtResource( 2 )

[node name="Oblacik2Player" type="AnimationPlayer" parent="Menu"]
root_node = NodePath(".")
anims/Oblacik2 = SubResource( 32 )
anims/RESET = SubResource( 33 )

[node name="Oblacik2" type="Sprite" parent="Menu/Oblacik2Player"]
position = Vector2( 2154, 1004 )
scale = Vector2( 0.67405, 0.850063 )
texture = ExtResource( 4 )

[node name="popisok" type="Label" parent="Menu"]
margin_left = 1209.0
margin_top = 106.0
margin_right = 1882.0
margin_bottom = 394.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 34 )
text = "USE ARROWS OR CURSOR
MADE FOR UCM TESTING PURPOSES "
align = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -8.0
margin_right = -40.0
margin_bottom = -8.0
custom_constants/margin_top = 80
custom_constants/margin_left = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 60.0
margin_top = 80.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="LOGO2" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
margin_right = 1860.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 1701, 49 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "LandSite"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 1860.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 20 )

[node name="StartTlacidlo" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 362.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 6.438 )
rect_pivot_offset = Vector2( -760, 197 )
focus_neighbour_top = NodePath("../InfoTlacidlo")
size_flags_horizontal = 0
theme = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 11 )
text = "Start GAME"

[node name="MarginContainer4" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 1860.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 20 )

[node name="NastaveniaTlacidlo" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 241.0
margin_bottom = 268.0
size_flags_horizontal = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 11 )
text = "SETTINGS"

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 1860.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 20 )

[node name="UkoncitTlacidlo" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 268.0
margin_bottom = 350.0
focus_neighbour_bottom = NodePath("../InfoTlacidlo")
size_flags_horizontal = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 11 )
text = "QUIT GAME"

[node name="MarginContainer5" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 1860.0
margin_bottom = 374.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 10 )

[node name="Popis" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 1860.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 7 )
text = "Made by Pavol Lukacka 
Inspired by Sebastian LauGUE"

[node name="MarginContainer6" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 421.0
margin_right = 1860.0
margin_bottom = 431.0
rect_min_size = Vector2( -0.061, 10 )

[node name="InfoTlacidlo" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 171.0
margin_bottom = 489.0
focus_neighbour_bottom = NodePath("../StartTlacidlo")
size_flags_horizontal = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 10 )
text = "ABOUT"

[node name="LogoNaOblaku" type="Sprite" parent="Menu/MarginContainer/VBoxContainer"]
position = Vector2( 908, 114 )
scale = Vector2( 0.157816, 0.147982 )
texture = ExtResource( 6 )

[node name="Planeta" type="Sprite" parent="Menu/MarginContainer/VBoxContainer"]
position = Vector2( 977.375, 753.25 )
scale = Vector2( 0.606468, 0.529076 )
texture = ExtResource( 3 )

[node name="AnimationPlayer1" type="AnimationPlayer" parent="Menu"]
anims/Balon1 = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="Balon1" type="Sprite" parent="Menu/AnimationPlayer1"]
visible = false
position = Vector2( 423.5, 228 )
rotation = -0.122173
scale = Vector2( 0.115234, 0.0976562 )
texture = ExtResource( 14 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("../AnimationPlayer1")
anims/Balon2 = SubResource( 23 )
anims/RESET = SubResource( 26 )

[node name="Balon2" type="Sprite" parent="Menu/AnimationPlayer2"]
visible = false
position = Vector2( 303.5, 311.5 )
scale = Vector2( 0.115234, 0.0996094 )
texture = ExtResource( 14 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("../AnimationPlayer2")
anims/Balon3 = SubResource( 24 )
anims/RESET = SubResource( 27 )

[node name="Balon3" type="Sprite" parent="Menu/AnimationPlayer3"]
visible = false
position = Vector2( 333, 395 )
rotation = -0.122173
scale = Vector2( 0.117188, 0.101562 )
texture = ExtResource( 14 )

[node name="AnimationPlayer4" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("../AnimationPlayer3")
anims/Balon4 = SubResource( 25 )
anims/RESET = SubResource( 28 )

[node name="Balon4" type="Sprite" parent="Menu/AnimationPlayer4"]
visible = false
position = Vector2( 240.5, 534 )
rotation = -0.122173
scale = Vector2( 0.119141, 0.0976563 )
texture = ExtResource( 14 )

[node name="SettingsMenu" parent="Menu" instance=ExtResource( 9 )]
visible = false
margin_left = -503.0
margin_top = 7.0
margin_right = 735.0
margin_bottom = 341.0

[connection signal="mouse_entered" from="Menu/MarginContainer/VBoxContainer/StartTlacidlo" to="Menu" method="_on_StartTlacidlo_mouse_entered"]
[connection signal="mouse_exited" from="Menu/MarginContainer/VBoxContainer/StartTlacidlo" to="Menu" method="_on_StartTlacidlo_mouse_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/StartTlacidlo" to="Menu" method="_on_StartTlacidlo_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/VBoxContainer/NastaveniaTlacidlo" to="Menu" method="_on_NastaveniaTlacidlo_mouse_entered"]
[connection signal="mouse_exited" from="Menu/MarginContainer/VBoxContainer/NastaveniaTlacidlo" to="Menu" method="_on_NastaveniaTlacidlo_mouse_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/NastaveniaTlacidlo" to="Menu" method="_on_NastaveniaTlacidlo_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/VBoxContainer/UkoncitTlacidlo" to="Menu" method="_on_UkoncitTlacidlo_mouse_entered"]
[connection signal="mouse_exited" from="Menu/MarginContainer/VBoxContainer/UkoncitTlacidlo" to="Menu" method="_on_UkoncitTlacidlo_mouse_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/UkoncitTlacidlo" to="Menu" method="_on_UkoncitTlacidlo_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/VBoxContainer/InfoTlacidlo" to="Menu" method="_on_InfoTlacidlo_mouse_entered"]
[connection signal="mouse_exited" from="Menu/MarginContainer/VBoxContainer/InfoTlacidlo" to="Menu" method="_on_InfoTlacidlo_mouse_exited"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/InfoTlacidlo" to="Menu" method="_on_InfoTlacidlo_pressed"]
[connection signal="about_to_show" from="Menu/SettingsMenu" to="Menu" method="_on_SettingsMenu_about_to_show"]
[connection signal="popup_hide" from="Menu/SettingsMenu" to="Menu" method="_on_SettingsMenu_popup_hide"]
